# qstch-set

./: .gitignore  BOTORCH_COMPATIBILITY.md  CHANGELOG.md  COMPETITIVE_LANDSCAPE_2026.md  DEEP_LITERATURE_MAP.md  EXPERIMENT_STRATEGY.md  LICENSE  MATH_VERIFICATION.md  PAPERS.md  PAPER_NARRATIVE.md  PAPER_PLAN_v2.md  README.md  REVIEWER_GUIDE.md  SCALING_ANALYSIS.md  SUPERVISOR_TODO.md  TECHNICAL_COMPARISON.md  THEORETICAL_RESULTS.md  integration_test.py  literature-analysis.md  pyproject.toml
.github/workflows/: tests.yml
benchmarks/: _smoke_test.py  _test_quick.py  ablation_K.py  ablation_mu.py  annealing_mu_experiment.py  dmta_benchmark.py  dtlz_benchmark.py  dtlz_benchmark_v2.py  molecular_benchmark.py  mu_sensitivity.py  plot_pareto_fronts.py  real_world_benchmark.py  run_ablations_after_main.py  run_all_benchmarks.py  run_from_config.py  run_overnight.ps1  status.py  zdt_benchmark.py
benchmarks/results/: ZDT2_m2_none_20260219_184533.json  dtlz2_m10_results.json  dtlz2_m5_results.json  dtlz2_m8_results.json  dtlz_DTLZ2_m3_results.json  summary.json  zdt1_results.json  zdt2_results.json  zdt_results.json
configs/: dtlz2_m10.yaml  dtlz2_m5.yaml
docs/: ACQUISITION_ANALYSIS.md  MOLECULAR_BO_PLAN.md  conf.py
docs/research/: ARXIV_2412_05265_ANALYSIS.md  CLAIMS_VERIFICATION.md  COMPETITOR_ANALYSIS.md  DEEP_LITERATURE_MAP.md  DEEP_LITERATURE_REVIEW_V2.md  DIAGNOSTIC_ANALYSIS.md  DRUG_DISCOVERY_CASE_STUDY.md  INTEGRATION_PLAN.md  LIN_PAPERS_DEEP_READ.md  MANY_OBJ_LANDSCAPE.md  PAPER_EXECUTION_PLAN.md  PAPER_PLAN.md  PIRES_CMAE2024_ANALYSIS.md  PIRES_COELHO_DEEP_DIVE.md
examples/: basic_qstchset.py  dtlz2_optimization.py
experiment_trajectories/: DTLZ2-final-2026-02-21.json  README.md  exp-001-dtlz2-m5.json  index.jsonl
notebooks/: stch_demo.ipynb  stch_qpmhi_tutorial.ipynb
paper/: _compute_timing.py  appendix.tex  main.tex  references.bib  theory_notes.md  theory_notes_k1_proof.md  theory_review.md  theory_section.tex
paper/figures/: gen_all_convergence.py  gen_m10_convergence.py  method_diagram.mermaid  method_diagram.tex  positioning_table.tex
paper_extractions/: competitive_update_2026-02-18.md  lin2025_extraction.json
references/: pdf_text.txt
results/: nibi_ablation_K_m5_results.json  nibi_final_results.json  nibi_m10_K10_results.json  nibi_m8_K8_results_PARTIAL.json
results/test/: seed_0_hv.txt
scripts/: generate_figures.py  precompute_selfies_ted.py  statistical_tests.py  test_selfies_ted.py  test_weight_temperature.py
slurm/: dmta_benchmark.sh  job_e_vehiclesafety.sh  job_f_penicillin.sh  job_g_carsideimpact.sh  job_rw_carsideimpact_mc512.sh  job_rw_penicillin_mc512.sh  job_rw_vehiclesafety_mc512.sh  molecular_bench.sh  molecular_bench_selfies.sh  molecular_bench_tanimoto.sh  rebuild_venv.sh  run_ablations.sh  run_benchmarks_full.sh  run_dtlz2.sh  setup_venv.sh  v5_resubmit_all.sh  v8_optimized_config.sh  v8_resubmit_all.sh  v8_resubmit_failed.sh
src/stch_botorch/: __init__.py  objectives.py  run_mobo.py  scalarization.py
src/stch_botorch/acquisition/: __init__.py  qpmhi.py  stch_set_bo.py
src/stch_botorch/benchmarks/: __init__.py  plotting.py  runner.py  synthetic.py
src/stch_botorch/integration/: __init__.py  stch_qpmhi.py
tests/: __init__.py  test_integration.py  test_numerical.py  test_objectives.py  test_qpmhi.py  test_scalarization.py  test_stch_qpmhi.py  test_stch_set_bo.py  test_tanimoto_kernel.py
(+2 files in other folders)
